# rv32m1-riscv

./: .gitignore  .ignore  Cargo.toml  LICENSE  README.md  devenv.nix
board/: Cargo.toml  memory.x
board/src/: lib.rs
board/src/vega/: mod.rs
chip/: Cargo.toml  build.rs  memory_chip.x
hal/: Cargo.toml
hal/src/: adc.rs  axbs.rs  cau3.rs  crc.rs  critical_section_impl.rs  dma.rs  dmamux.rs  dual_core.rs  emvsim.rs  error.rs  ewm.rs  fb.rs  flexio.rs  flexio_i2c.rs  flexio_spi.rs  flexio_uart.rs  ftfe.rs  i2s.rs  lib.rs  llwu.rs  lpcmp.rs  lpdac.rs  lpi2c.rs  lpit.rs  lpspi.rs  lptmr.rs  lpuart.rs  mcm.rs  mscm.rs  mua.rs  pcc.rs  port.rs  prelude.rs  rsim.rs  rtc.rs  scg.rs  sema42.rs  sim.rs  smc.rs  spm.rs  (+10 more)
hal/src/gpio/: mod.rs  ports.rs
pac/: Cargo.toml  device.x
src/: lib.rs
