[package]
name = "rv32m1-riscv-board"
version = "0.1.1"
edition = "2024"
description = "Board support packages for RV32M1-based boards"
license = "MIT"
repository = "https://github.com/Curious-r/rv32m1-riscv"
keywords = ["riscv", "embedded", "board", "rv32m1", "vega"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
default = ["vega"]
vega = []
rt = ["rv32m1-riscv-chip/rt", "rv32m1-riscv-pac/rt"]

[dependencies]
rv32m1-riscv-chip = { path = "../chip", version = "0.1.1" }
rv32m1-riscv-pac = { path = "../pac", version = "0.1.1" }
rv32m1-riscv-hal = { path = "../hal", version = "0.1.1" }
embedded-hal = "1.0"
