[package]
name = "rv32m1-riscv-chip"
version = "0.1.0"
edition = "2024"
description = "Chip-level constants and linker definitions for RV32M1 SoC"
license = "MIT"
repository = "https://github.com/Curious-r/rv32m1-riscv"
keywords = ["riscv", "embedded", "rv32m1", "vega"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
rt = []

[dependencies]
