[package]
name = "rv32m1-riscv-hal"
version = "0.3.0"
edition = "2024"
description = "HAL for RISC-V (RI5CY + ZERO-RISCY) cores of RV32M1 chips"
license = "MIT"
repository = "https://github.com/Curious-r/rv32m1-riscv"
keywords = ["riscv", "embedded", "hal", "rv32m1", "vega"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
rv32m1-riscv-pac = { path = "../pac", version = "0.3.0" }
embedded-hal = "1.0"
embedded-hal-nb = "1.0"
nb = "1"
critical-section = { version = "1.0", features = ["restore-state-bool"] }
